@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-31T08:17:32Z",
+  "timestamp" : "2022-07-31T16:19:11Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 454,
+  "count" : 455,
   "uniques" : 261,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
